--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,16 @@ h1 {
     font-size: 5.5em;
     text-shadow: 3px 3px 9px rgba(255, 255, 0, 0.9);
     margin:0;
+    position: fixed
+
 }
 h4 {
     font-size: 2.4em;
+    position: fixed
+
 }
 .button {
-    color: red;
+    color: #8E8C61;
 } 
 body {
     padding: 0; margin: 0;
